...
                        <View style={styles.statsContainer}>
                            <View style={styles.statItem}>
                                <Text style={styles.statNumber} className="text-foreground">
                                    {olasContent.length}
                                </Text>
                                <Text style={styles.statLabel} className="text-foreground">
                                    Posts
                                </Text>
                            </View>
                            {/* <View style={styles.statItem}>
                                <Text style={styles.statNumber} className="text-foreground">
                                    N/A
                                </Text>
...
                            {followCount ? (
                                <View style={styles.statItem}>
                                    <Text style={styles.statNumber} className="text-foreground">
                                        {followCount}
                                    </Text>
                                    <Text style={styles.statLabel} className="text-foreground">
                                        Following
                                    </Text>
                                </View>
                            ) : null}
                        </View>

                        <FollowButton
...
