...
            />

            <Tabs.Screen
                name="search"
                options={{
                    headerShown: false,
                    title: 'Search',
                    tabBarIcon: ({ color, focused }) => <Search size={24} color={color} strokeWidth={2.5} />,
                }}
            />

            <Tabs.Screen
                name="publish2"
...
