...
    return (
        <>
            <View style={[styles.header]}>
                <CloseButton onPress={onClose} />
                <TouchableOpacity
                    style={[styles.button, styles.textButton]}
                    testID="add-text-button"
                    onPress={onAddText}
                >
                    <Ionicons name="text" size={20} color="white" />
                </TouchableOpacity>
                <TouchableOpacity
                    onPress={onOpenStickers}
...
