...
                size={size}
                onPress={follow}
                onLongPress={() => {}}
                className="rounded-sm"
            >
                {followStatus === 'private' && <Lock size={16} color={colors.muted} />}
                <Text className="pr-2 text-sm">{followStatus ? 'Following' : 'Follow'}</Text>
            </Button>
            <Button
                variant="secondary"
                size="sm"
                className="rounded-sm"
                onPress={handleOpenUserBottomSheet}
...
