...
            status: te.state,
            date: new Date(te.token?.created_at*1000).toLocaleString(),
        })), null, 2));
        console.log("Journal");
        console.log(JSON.stringify(activeWallet.state.journal, null, 2));
        // const signer = NDKPrivateKeySigner.generate();
        // const pablo = ndk.getUser({ npub: "npub1l2vyh47mk2p0qlsku7hg0vn29faehy9hy34ygaclpn66ukqp3afqutajft" });
        // [dump.balances, dump.proofs, dump.tokens, activeWallet.state.journal].forEach(async (data) => {
        //     const message = new NDKEvent(ndk);
        //     message.kind = 4;
        //     message.content = JSON.stringify(data);
        //     await message.encrypt(pablo);
        //     message.tags.push(['p', pablo.pubkey]);
...
