...
            color: 'white',
            fontSize: 24,
            fontWeight: 'bold',
        },
    },
    {
        name: 'Profile',
        containerStyle: {
            backgroundColor: 'rgba(33, 150, 243, 0.8)',
            borderRadius: 160,
            padding: 20,
            flexDirection: 'row',
            alignItems: 'center',
...
