...

const replyKinds = new Set([NDKKind.GenericReply, NDKKind.Text]);
const replyFilter = (event: NDKEvent) => replyKinds.has(event.kind);

const reactionFilter = (event: NDKEvent) => event.kind === NDKKind.Reaction;

const segmentOptions = ['All', 'Replies', 'Reactions'];

if (WALLET_ENABLED) segmentOptions.push('Zaps');

export default function Notifications() {
    const [settingsTab, setSettingsTab] = useAtom(settingsTabAtom);
    const currentUser = useNDKCurrentUser();
...
            setRefreshing(false);
        }, 1250);
    }, [notifications]);

    return (
        <>
            <Stack.Screen options={{ headerShown: true, title: 'Notifications' }} />
            <View style={styles.container} className="bg-card">
                <NotificationPrompt />
                <SegmentedControl
                    values={segmentOptions}
                    selectedIndex={selectedIndex}
                    onIndexChange={(index) => {
...
